--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,12 +9,58 @@ variables:
   acrName: 'myacrferfefd'
   acrResourceGroup: 'rg_testing_terraform'
   acrServiceConnection: 'acr-connection'
-
+  sonarServiceConnection: 'sonar-connection'
   # Azure Kubernetes Service (AKS) settings
   aksCluster: 'testcheck'
   aksServiceConnection: 'aks-connection'
 
 stages:
+- stage: Analysis
+  jobs:
+  - job: AnalysisJob
+    displayName: 'Run Analysis'
+    steps:
+    - checkout: self
+
+    # Run SonarQube analysis
+    - task: SonarQubePrepare@4
+      inputs:
+        SonarQube: 'sonar-connection'  # Add your SonarQube service connection name
+
+    - task: SonarQubeAnalyze@4
+
+    # Publish Quality Gate Result
+    - task: SonarQubePublish@4
+      inputs:
+        pollingTimeoutSec: '300'
+
+- stage: PublishQualityGate
+  jobs:
+  - job: PublishQualityGateJob
+    displayName: 'Publish Quality Gate Result'
+    dependsOn: Analysis
+    steps:
+    - checkout: self
+
+    # Publish Quality Gate Result
+    - task: SonarQubePublish@4
+      inputs:
+        pollingTimeoutSec: '300'
+
+- stage: SonarQualityGateCheck
+  jobs:
+  - job: SonarQualityGateCheckJob
+    displayName: 'Sonar Quality Gate Check'
+    dependsOn: PublishQualityGate
+    steps:
+    - checkout: self
+
+    # Run SonarQube quality gate check
+    - task: SonarQubeCheck@4
+      inputs:
+        SonarQube: 'sonar-connection'  # Add your SonarQube service connection name
+        projectKey: 'testingsonar123'
+
 - stage: BuildAndPush
   displayName: 'Build and Push to ACR'
   jobs:
@@ -43,18 +89,7 @@ stages:
       inputs:
         PathtoPublish: deployment/deployment.yaml
 
-- job: Deploy
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-  - task: AzureCLI@2
-    inputs:
-      azureSubscription: '<Name of your Azure subscription service connection>'
-      scriptType: 'ps'
-      scriptLocation: 'inlineScript'
-      inlineScript: |
-        # Your Azure CLI commands here
-
+# Uncomment the following section if you want to deploy to AKS
 # - stage: DeployToAKS
 #   displayName: 'Deploy to AKS'
 #   dependsOn: BuildAndPush
@@ -78,3 +113,4 @@ stages:
 #         kubernetesServiceConnection: '$(AksServiceConnection)'
 #         manifests: '$(Build.SourcesDirectory)/k8s/deployment.yaml'
 #         containers: 'my-app-container'  # Replace with your container name
+
