--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,50 +22,19 @@ stages:
     steps:
     - checkout: self
 
-    # Run SonarQube analysis
+    # SonarQube Prepare Analysis Configuration
     - task: SonarQubePrepare@4
       inputs:
         SonarQube: 'sonar-connection'  # Add your SonarQube service connection name
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: 'testingsonar123'
 
+    # Your existing SonarQube Analysis steps
     - task: SonarQubeAnalyze@4
-
-    # Publish Quality Gate Result
     - task: SonarQubePublish@4
       inputs:
         pollingTimeoutSec: '300'
-
-- stage: PublishQualityGate
-  jobs:
-  - job: DummyJob
-    displayName: 'Dummy Job'
-    steps:
-    - checkout: self
-    - script: echo "This is a dummy job, used to satisfy the stage dependency requirements."
-
-  - job: PublishQualityGateJob
-    displayName: 'Publish Quality Gate Result'
-    dependsOn: DummyJob
-    steps:
-    - checkout: self
-
-    # Publish Quality Gate Result
-    - task: SonarQubePublish@4
-      inputs:
-        pollingTimeoutSec: '300'
-
-- stage: SonarQualityGateCheck
-  jobs:
-  - job: SonarQualityGateCheckJob
-    displayName: 'Sonar Quality Gate Check'
-    dependsOn: PublishQualityGate
-    steps:
-    - checkout: self
-
-    # Run SonarQube quality gate check
-    - task: SonarQualityGateCheck
-      inputs:
-        SonarQube: 'sonar-connection'  # Add your SonarQube service connection name
-        projectKey: 'testingsonar123'
 
 - stage: BuildAndPush
   displayName: 'Build and Push to ACR'
