--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,8 @@ stages:
         scannerMode: 'CLI'
         configMode: 'manual'
         cliProjectKey: 'testingsonar123'
+        cliSources: '$(Build.SourcesDirectory)'
+        nodeJSVersion: '10.x'  # Specify a version that works with SonarQube tasks
 
     # Your existing SonarQube Analysis steps
     - task: SonarQubeAnalyze@4
