--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,7 @@ stages:
 
     # Run SonarQube quality gate check using Bash script
     - script: |
+        set -x
         sonarQubeUrl="http://20.15.204.13:9000"
         projectKey="testingsonar123"
         
