--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ stages:
     # Run SonarQube quality gate check using Bash script
     - script: |
         set -x
-        sonarQubeUrl="http://20.15.204.13:9000"
+        sonarQubeUrl="http://20.15.204.13:9000/api/qualitygates/project_status?projectKey=testingsonar123"
         projectKey="testingsonar123"
         
         qualityGateStatus=$(curl -s "$sonarQubeUrl/api/qualitygates/project_status?projectKey=$projectKey" | jq -r '.projectStatus.status')
