--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,51 +35,24 @@ stages:
     # Run SonarQube quality gate check using Bash script
     - script: |
         set -x
-        $username = admin
-        $password = test
+        username="admin"
+        password="test"
 
-        $base64AuthInfo = [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("$(username):$(password)"))
+        base64AuthInfo=$(echo -n "$username:$password" | base64)
 
-        $headers = @{
-            Authorization = "Basic $base64AuthInfo"
-        }
+        headers=(
+            "Authorization: Basic $base64AuthInfo"
+        )
 
-        $projectKey = "testingsonar123"
-        $branch = "master" 
-        $apiUrl = "http://20.15.204.13:9000/api/qualitygates/project_status?projectKey=$projectKey&branch=$branch"
+        projectKey="testingsonar123"
+        branch="master"
+        apiUrl="http://20.15.204.13:9000/api/qualitygates/project_status?projectKey=$projectKey&branch=$branch"
 
-        $result = Invoke-RestMethod -Method Get -Uri $apiUrl -Headers $headers
+        result=$(curl -s -H "${headers[@]}" "$apiUrl")
 
-        if ($result.projectStatus.status -eq "OK") {
-            Write-Host "Quality Gate Succeeded"
-        } else {
-            throw "Quality gate failed"
-        }
-
-- stage: BuildAndPush
-  displayName: 'Build and Push to ACR'
-  jobs:
-  - job: Build
-    displayName: 'Build and Push'
-    steps:
-    - checkout: self
-    - task: Docker@2
-      displayName: 'Build and push Docker image'
-      inputs:
-        command: 'buildAndPush'
-        containerRegistry: '$(AcrServiceConnection)'
-        repository: 'testing'
-        Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(Build.BuildId)
-
-    - task: CopyFiles@2
-      displayName: 'Copy Files to: drop'
-      inputs:
-        SourceFolder: deployment
-        Contents: deployment.yaml
-        TargetFolder: drop
-    - task: PublishBuildArtifacts@1
-      displayName: 'Publish Artifact: drop'
-      inputs:
-        PathtoPublish: deployment/deployment.yaml
+        if [[ $(echo "$result" | jq -r .projectStatus.status) == "OK" ]]; then
+            echo "Quality Gate Succeeded"
+        else
+            echo "Quality gate failed"
+            exit 1
+        fi
