--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
-trigger:
+  trigger:
 - master
 
 pool:
@@ -36,8 +36,8 @@ stages:
     # Run SonarQube quality gate check using Bash script
     - script: |
         set -x
-        username="$(username)"
-        password="$(password)"
+        username=$env:username
+        password=$env:Password
 
         base64AuthInfo=$(echo -n "$username:$password" | base64)
 
@@ -45,7 +45,7 @@ stages:
             "Authorization: Basic $base64AuthInfo"
         )
 
-        projectKey="$(ProjectKey)"
+        projectKey=$env:ProjectKey
         branch="master"
         apiUrl="http://20.15.204.13:9000/api/qualitygates/project_status?projectKey=$projectKey&branch=$branch"
 
