--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,13 +5,13 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-- group: sonarlogin
-- name: acrServiceConnection
-  value: 'acr-connection'
-- name: sonarServiceConnection
-  value: 'sonar-connection'
-- name: aksServiceConnection
-  value: 'aks-connection'
+  - group: sonarlogin
+  - name: acrServiceConnection
+    value: 'acr-connection'
+  - name: sonarServiceConnection
+    value: 'sonar-connection'
+  - name: aksServiceConnection
+    value: 'aks-connection'
 
 stages:
 - stage: Analysis
@@ -61,6 +61,30 @@ stages:
             exit 1
         fi
 
+- stage: BuildAndPush
+  displayName: 'Build and Push to ACR'
+  jobs:
+  - job: Build
+    displayName: 'Build and Push'
+    steps:
+    - checkout: self
+    - task: Docker@2
+      displayName: 'Build and push Docker image'
+      inputs:
+        command: 'buildAndPush'
+        containerRegistry: '$(AcrServiceConnection)'
+        repository: 'testing'
+        Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(Build.BuildId)
 
-
-        #jhkh
+    - task: CopyFiles@2
+      displayName: 'Copy Files to: drop'
+      inputs:
+        SourceFolder: deployment
+        Contents: deployment.yaml
+        TargetFolder: drop
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publish Artifact: drop'
+      inputs:
+        PathtoPublish: deployment/deployment.yaml
