--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,26 +1,32 @@
 version: 0.2
+
 phases:
-  install:
-    runtime-versions:
-      nodejs: 18
-    commands:
-      - npm install -g typescript
-      - npm install
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
+
   build:
     commands:
       - echo Build started on `date`
       - tsc
       - npm prune --production
-    post_build:
-      commands:
-        - echo Build completed on `date`  
-artifacts:
-  type: zip
-  files:
-    - package.json
-    - package-lock.json
-    - "build/**/*"
-    - .ebextensions/**/*
+
+      # Docker commands
+      - echo Building Docker image...
+      - docker build -t your-docker-image-name .
+      - echo Logging in to Docker Hub...
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - echo Pushing Docker image to Docker Hub...
+      - docker push your-docker-image-name
+
+  post_build:
+    commands:
+      - echo Build completed on `date`
+
+# artifacts:
+#   type: zip
+#   files:
+#     - package.json
+#     - package-lock.json
+#     - "build/**/*"
+#     - .ebextensions/**/*
