--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
 
       # Docker commands
       - echo Building Docker image...
-      - docker build -t your-docker-image-name . -t -d
+      - docker build -t testing . 
       - #echo Logging in to Docker Hub...
       - #echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - #echo Pushing Docker image to Docker Hub...
