--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,18 +4,21 @@ phases:
   install:
     runtime-versions:
       python: 3.11
+    commands:
+      - echo Installing Docker...
+      - apt-get update
+      - apt-get install -y docker.io
 
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      # - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
-      # - $(aws ecr get-login --no-include-email --region $AWS_REGION)
+      - $(aws ecr get-login --no-include-email --region $AWS_REGION)
 
   build:
     commands:
       - echo Building Docker image...
-      - docker build -t $400926585409.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest .
-      - docker push $400926585409.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
+      - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/reactapp:latest .
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/reactapp:latest
 
   post_build:
     commands:
