--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,6 @@ phases:
       - echo Installing Docker...
       - apt-get update
       - apt-get install -y docker.io
-
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
@@ -17,8 +16,8 @@ phases:
   build:
     commands:
       - echo Building Docker image...
-      - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/reactapp:latest .
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/reactapp:latest
+      - docker build -t 400926585409.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
+      - docker push A400926585409.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
 
   post_build:
     commands:
