--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,21 +8,22 @@ phases:
       - echo Installing Docker...
       - apt-get update
       - apt-get install -y docker.io
-  pre_build:
-    commands:
-      - echo Logging in to Amazon ECR...
-      #- $(aws ecr get-login --no-include-email --region $AWS_REGION)
+      - docker images
+  # pre_build:
+  #   commands:
+  #     - echo Logging in to Amazon ECR...
+  #     #- $(aws ecr get-login --no-include-email --region $AWS_REGION)
 
-  build:
-    commands:
-      - echo Building Docker image...
-      - docker build -t 400926585409.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
-      - docker push A400926585409.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
+  # build:
+  #   commands:
+  #     - echo Building Docker image...
+  #     - docker build -t 400926585409.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
+  #     - docker push A400926585409.dkr.ecr.us-east-1.amazonaws.com/reactapp:latest
 
-  post_build:
-    commands:
-      - echo Deploying to Kubernetes...
-      - kubectl apply -f kubernetes-manifests/
+#   post_build:
+#     commands:
+#       - echo Deploying to Kubernetes...
+#       - kubectl apply -f kubernetes-manifests/
 
-artifacts:
-  files: '*'
+# artifacts:
+#   files: '*'
