--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
       - apt-get update
       - apt-get install -y docker.io
       - docker images
+      - docker build -t testing .
   # pre_build:
   #   commands:
   #     - echo Logging in to Amazon ECR...
