--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,15 @@
 pool:
   vmImage: 'ubuntu-latest'
 
+variables:
+  #- group: sonarlogin
+  - name: acrServiceConnection
+    value: 'acr-connection'
+  #- name: sonarServiceConnection
+  #  value: 'sonar-connection'
+  - name: aksServiceConnection
+    value: 'aks-connection'
+
 stages:
 - stage: SonarQualityGateCheck
   jobs:
@@ -16,15 +25,6 @@ stages:
 
 # pool:
 #   vmImage: 'ubuntu-latest'
-
-# variables:
-#   - group: sonarlogin
-#   - name: acrServiceConnection
-#     value: 'acr-connection'
-#   - name: sonarServiceConnection
-#     value: 'sonar-connection'
-#   - name: aksServiceConnection
-#     value: 'aks-connection'
 
 # stages:
 # - stage: Analysis
@@ -74,30 +74,30 @@ stages:
 #             exit 1
 #         fi
 
-# - stage: BuildAndPush
-#   displayName: 'Build and Push to ACR'
-#   jobs:
-#   - job: Build
-#     displayName: 'Build and Push'
-#     steps:
-#     - checkout: self
-#     - task: Docker@2
-#       displayName: 'Build and push Docker image'
-#       inputs:
-#         command: 'buildAndPush'
-#         containerRegistry: '$(AcrServiceConnection)'
-#         repository: 'testing'
-#         Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-#         tags: |
-#           $(Build.BuildId)
+- stage: BuildAndPush
+  displayName: 'Build and Push to ACR'
+  jobs:
+  - job: Build
+    displayName: 'Build and Push'
+    steps:
+    - checkout: self
+    - task: Docker@2
+      displayName: 'Build and push Docker image'
+      inputs:
+        command: 'buildAndPush'
+        containerRegistry: '$(AcrServiceConnection)'
+        repository: 'testing'
+        Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(Build.BuildId)
 
-#     - task: CopyFiles@2
-#       displayName: 'Copy Files to: drop'
-#       inputs:
-#         SourceFolder: deployment
-#         Contents: deployment.yaml
-#         TargetFolder: drop
-#     - task: PublishBuildArtifacts@1
-#       displayName: 'Publish Artifact: drop'
-#       inputs:
-#         PathtoPublish: deployment/deployment.yaml
+    - task: CopyFiles@2
+      displayName: 'Copy Files to: drop'
+      inputs:
+        SourceFolder: deployment
+        Contents: deployment.yaml
+        TargetFolder: drop
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publish Artifact: drop'
+      inputs:
+        PathtoPublish: deployment/deployment.yaml
